--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@
                 <div class="row">
                     <div class="input-block">
                         <label for="first-name">First name</label>
-                        <input type="text" name="first-name" id="" required="true">
+                        <input type="text" name="first-name" id="" required="true" placeholder="First name">
                     </div>
                     <div class="input-block">
                         <label for="last-name">Last name</label>
-                        <input type="text" name="last-name" id="" required="true">
+                        <input type="text" name="last-name" id="" required="true" placeholder="Last name">
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-block">
                         <label for="email-input">E-mail</label>
-                        <input type="email" name="email-input" id="" required="true">
+                        <input type="email" name="email-input" id="" required="true" placeholder="E-mail">
                     </div>
                     <div class="input-block">
                         <label for="phone-number">Phone number</label>
-                        <input type="tel" pattern="/\(?([0-9]{3})\)?([ .-]?)([0-9]{3})\2([0-9]{4})/" name="phone-number" id="" required="true">
+                        <input type="tel" pattern="/\(?([0-9]{3})\)?([ .-]?)([0-9]{3})\2([0-9]{4})/" name="phone-number" id="" required="true" placeholder="7-777-7777">
                     </div>
                 </div>
                 <div class="row">
                     <div class="input-block">
                         <label for="password">Password</label>
-                        <input type="password" name="password" id="" required="true">
+                        <input type="password" name="password" id="" required="true" placeholder="Password">
                     </div>
                     <div class="input-block">
                         <label for="password-repeat">Repeat password</label>
-                        <input type="password" name="password-repeat" id="" required="true">
+                        <input type="password" name="password-repeat" id="" required="true" placeholder="Password">
                     </div>
                 </div>
                 <button type="submit">Create account</button>
